syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/Drolfothesgnir/simplebank/pb";

message User {
  // string username = 1;
  // string full_name = 2;
  // string email = 3;
  // google.protobuf.Timestamp password_changed_at = 4;
  // google.protobuf.Timestamp created_at = 5;
  // bool is_email_verified = 6;

  string username = 1;
  string role = 2;
  string full_name = 3;
  string email = 4;
  google.protobuf.Timestamp password_changed_at = 5;
  google.protobuf.Timestamp created_at = 6;
  bool is_email_verified = 7;
}